--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,18 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Moco Energy"
+        android:label="MoCo Energy"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGreenMC">
-        <activity android:name=".StatsActivity"></activity>
+        <activity android:name=".Instructions"></activity>
+        <activity android:name=".PrizesActivity" />
+        <activity android:name=".MyAccount" />
+        <activity android:name=".StatsActivity" />
         <activity android:name=".SelectTasks" />
         <activity
             android:name=".LoginActivity"
-            android:configChanges="uiMode">
+            android:configChanges="uiMode" >
 
         </activity>
         <activity android:name=".MainActivity">
